tests/snapshots/examples_fixtures/type_system__failing__21_perform_unknown_operation.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/21_perform_unknown_operation.flx
== compile ==
failed (compile)
== diagnostics ==
error[E404]: Unknown Effect Operation

Effect `Console` has no declared operation `read`.

  examples/type_system/failing/21_perform_unknown_operation.flx:8:5
  |
8 |     perform Console.read("x")
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |     ------------------------- unknown operation in perform

Hint:
  Add the operation to the effect declaration or rename it.
== stdout ==
<not executed>
